fix imgs broken on video-react

--- a/src/client/src/components/Chat/chat.css
+++ b/src/client/src/components/Chat/chat.css
@@ -41,6 +41,7 @@
     width: 90%;
     margin: 16px;
     border-radius: 12px;
+    font-size: 15px;
     border: none;
     background-color: #2F3334;
     color: #B9B5B5;
